Fix issue where the progress bar would jump up on click

--- a/LKTweaks-E&R.user.styl
+++ b/LKTweaks-E&R.user.styl
@@ -124,7 +124,7 @@ div.px-4 {
 
 /* Progress Bar */
 .ytp-embed .ytp-progress-bar-container {
-    bottom: -2px !important;
+    bottom: 0px !important;
 }
 
 .ytp-progress-bar-container:hover .ytp-timed-markers-container {
